Regression: Crash when drawing all view layers in outliner #111545

Closed
opened 2023-08-26 02:19:03 +02:00 by Guido · 9 comments

System Information
Operating system: macOS-13.5.1-x86_64-i386-64bit 64 Bits
Graphics card: Metal API AMD Radeon Pro 5700 XT 1.2

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-25 21:06, hash: 383a145a190c
Worked: (newest version of Blender that worked as expected)

Short description of error
Some of the Workspace Tabs are crashing blender when clicked.
Haven't tried all, but compositing, sculpting, modeling do crash blender.

Steps to Reproduce

  • Open default scene
  • Enable "all view layers" from outliner filters

Original report:

  • Open startup.blend file
  • Click on sculpting workspace

startup file

TERMINAL output:

Writing: /var/folders/52/n3w6n9_d3796bq40xttnphd40000gn/T/blender.crash.txt
[1] 98188 segmentation fault /Users/NURB/blender-git/build_darwin/bin/Blender.app/Contents/MacOS/Blender


BLENDER CRASH TXT:

Blender 4.0.0, Commit date: 2023-08-25 21:06, Hash 383a145a19

bpy.ops.initial.settings() # Operator

backtrace

0 Blender 0x0000000107031437 BLI_system_backtrace + 55
1 Blender 0x000000010673c814 _ZL16sig_handle_crashi + 388
2 libsystem_platform.dylib 0x00007ff80eb6f5ed _sigtramp + 29
3 ??? 0x0000000000000000 0x0 + 0
4 Blender 0x000000010804a810 _ZN7blender2ed8outliner19outliner_build_treeEP4MainP5SceneP9ViewLayerP13SpaceOutlinerP7ARegion + 528
5 Blender 0x0000000108034933 _ZN7blender2ed8outliner13draw_outlinerEPK8bContext + 131
6 Blender 0x000000010804c8e0 _ZN7blender2ed8outlinerL25outliner_main_region_drawEPK8bContextP7ARegion + 32
7 Blender 0x0000000107641ca1 _Z17ED_region_do_drawP8bContextP7ARegion + 337
8 Blender 0x0000000107047229 _Z14wm_draw_updateP8bContext + 1881
9 Blender 0x00000001070433d0 _Z7WM_mainP8bContext + 48
10 Blender 0x00000001067386a7 main + 887
11 dyld 0x00007ff80e7e841f start + 1903

Python backtrace

**System Information** Operating system: macOS-13.5.1-x86_64-i386-64bit 64 Bits Graphics card: Metal API AMD Radeon Pro 5700 XT 1.2 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-25 21:06, hash: `383a145a190c` Worked: (newest version of Blender that worked as expected) **Short description of error** Some of the Workspace Tabs are crashing blender when clicked. Haven't tried all, but compositing, sculpting, modeling do crash blender. **Steps to Reproduce** - Open default scene - Enable "all view layers" from outliner filters - - - Original report: - Open startup.blend file - Click on sculpting workspace [startup file](https://projects.blender.org/attachments/983888e5-2cbf-44ec-9f45-8b2e0d1118f5) <details> <summary> TERMINAL output: </summary> Writing: /var/folders/52/n3w6n9_d3796bq40xttnphd40000gn/T/blender.crash.txt [1] 98188 segmentation fault /Users/NURB/blender-git/build_darwin/bin/Blender.app/Contents/MacOS/Blender ------------------------------------- BLENDER CRASH TXT: # Blender 4.0.0, Commit date: 2023-08-25 21:06, Hash 383a145a190c bpy.ops.initial.settings() # Operator # backtrace 0 Blender 0x0000000107031437 BLI_system_backtrace + 55 1 Blender 0x000000010673c814 _ZL16sig_handle_crashi + 388 2 libsystem_platform.dylib 0x00007ff80eb6f5ed _sigtramp + 29 3 ??? 0x0000000000000000 0x0 + 0 4 Blender 0x000000010804a810 _ZN7blender2ed8outliner19outliner_build_treeEP4MainP5SceneP9ViewLayerP13SpaceOutlinerP7ARegion + 528 5 Blender 0x0000000108034933 _ZN7blender2ed8outliner13draw_outlinerEPK8bContext + 131 6 Blender 0x000000010804c8e0 _ZN7blender2ed8outlinerL25outliner_main_region_drawEPK8bContextP7ARegion + 32 7 Blender 0x0000000107641ca1 _Z17ED_region_do_drawP8bContextP7ARegion + 337 8 Blender 0x0000000107047229 _Z14wm_draw_updateP8bContext + 1881 9 Blender 0x00000001070433d0 _Z7WM_mainP8bContext + 48 10 Blender 0x00000001067386a7 main + 887 11 dyld 0x00007ff80e7e841f start + 1903 # Python backtrace </details>
Guido added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-08-26 02:19:04 +02:00
Member

Hi, thanks for the report. Unable to reproduce the crash in current main.
From crash log this doesn't look like mac specific.
Do you've custom startup file? Try factory reset: File > Defaults > Load Factory Settings
Maybe caused by the new region types: 98142f5e35

Hi, thanks for the report. Unable to reproduce the crash in current main. From crash log this doesn't look like mac specific. Do you've custom startup file? Try factory reset: `File > Defaults > Load Factory Settings` Maybe caused by the new region types: 98142f5e35
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-08-28 04:49:28 +02:00
Author

Yes I have a custom startup file, that works since blender 3.0.
With factory settings the problem isn't there, BUT will be if someone uses his custom startup file.


(NO ONE is using blender without any custom change nor addons)

By the way, blender 4.0a is the worst I've ever seen. It breaks up to 80% of addons and setups.
I manages to get several addons fixed with the devs, just to find out that it isn't working anymore two days later..
Blender 4.0 won't be THE big update, it will be a big mess until 4.5. And then there still will be the issues carried since 2.93...
From the render side, 4.0 is way slower than 3.6. Also we are on 3.6.3rc and it's still buggy.
I hereby quit bugreporting for 4.x.

Yes I have a custom startup file, that works since blender 3.0. With factory settings the problem isn't there, BUT will be if someone uses his custom startup file. -------------------------------------------------------------------------------------------------------------- (NO ONE is using blender without any custom change nor addons) By the way, blender 4.0a is the worst I've ever seen. It breaks up to 80% of addons and setups. I manages to get several addons fixed with the devs, just to find out that it isn't working anymore two days later.. Blender 4.0 won't be THE big update, it will be a big mess until 4.5. And then there still will be the issues carried since 2.93... From the render side, 4.0 is way slower than 3.6. Also we are on 3.6.3rc and it's still buggy. I hereby quit bugreporting for 4.x.
Member

I hereby quit bugreporting for 4.x.

Please dont!
Your feedback is extremely welcome and helps tremendously tracking these things down.
Fully aware stability wise this can be a pain, but reporting these things is the best way to get them out of the way.

Can you share the startup file?

> I hereby quit bugreporting for 4.x. Please dont! Your feedback is extremely welcome and helps tremendously tracking these things down. Fully aware stability wise this can be a pain, but reporting these things is the best way to get them out of the way. Can you share the startup file?
Author
No description provided.
Member

Can confirm, thanks. 🙂

blender 4.0a is the worst I've ever seen. It breaks up to 80% of addons and setups.

Breaking API changes are already plan for 4.0: #105523
This might be beneficial for future development


4.0 is still under development. Various crash and other bugs do happen until the final release.
Keep submitting bugs if you find any, it will help us to fix these problems in time 🙏

Can confirm, thanks. 🙂 > blender 4.0a is the worst I've ever seen. It breaks up to 80% of addons and setups. Breaking API changes are already plan for 4.0: #105523 This might be beneficial for future development - - - 4.0 is still under development. Various crash and other bugs do happen until the final release. Keep submitting bugs if you find any, it will help us to fix these problems in time 🙏
Member
Caused by d5c7608b39c516e849f6199cb73a3c430aa57113 @Almaz-Shinbay @JulianEisel ^
Pratik Borhade added the
Module
User Interface
label 2023-08-29 07:23:41 +02:00
Member

Well, actually crash triggers when "all view layers" filter is enabled.

Well, actually crash triggers when "all view layers" filter is enabled.
Pratik Borhade changed title from Crash when clicking on some Workspace tabs --Intel MacOS-- to Regression: Crash when drawing all view layers in outliner 2023-08-29 08:48:19 +02:00
Pratik Borhade self-assigned this 2023-08-29 09:02:44 +02:00
Contributor

@PratikPB2123 Found an issue, can fix that now.

@PratikPB2123 Found an issue, can fix that now.
Member

@Almaz-Shinbay : #111646
Can you review this?

@Almaz-Shinbay : https://projects.blender.org/blender/blender/pulls/111646 Can you review this?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-29 14:12:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111545
No description provided.