Fix #111545: Regression: Crash when drawing all view layers in outliner

Caused by d5c7608b39

view_layer is paissed in outliner_add_element to fix the view layer
exansion (c2fdbcca3c). This result in crash after the recent refactor.
Use new struct to fix the crash and to maintain the fix of view
layer expansion.