source/blender/editors/space_outliner/tree/tree_display_view_layer.cc
@@ -80,8 +80,9 @@ ListBase TreeDisplayViewLayer::buildTree(const TreeSourceData &source_data)
       add_view_layer(*scene, tree, (TreeElement *)nullptr);
     }
     else {
+      ViewLayerElementCreateData new_layer = {scene, view_layer};
       TreeElement &te_view_layer = *outliner_add_element(
-          &space_outliner_, &tree, view_layer, nullptr, TSE_R_LAYER, 0);
+          &space_outliner_, &tree, &new_layer, nullptr, TSE_R_LAYER, 0);
 
       TreeStoreElem *tselem = TREESTORE(&te_view_layer);
 
